Agregué nuevas funcionalidades, botones para vaciar o comprar carrito, eliminar unidades individuales desde carrito, y busqueda en filtro x palabra clave, en actividad, nombre y tipo

--- a/main.css
+++ b/main.css
@@ -252,6 +252,10 @@ footer svg {
 
 #carritoButton {}
 
+#vaciarCarrito {}
+
+#comprarCarrito {}
+
 @media (max-width: 992px) {
     h1 {
         font-size: 2.3em;
